Implement header/nav/footer from Creatives sources

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,9 @@
   {% include head.html %}
 
   <body>
+  	{% include main_nav.html %}
     {{ content }}
-
+    {% include footer.html %}
     {% include end-scripts.html %}
   </body>
 
