--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,2 +1,3 @@
 <script src="js/vendors/jQuery.js"></script>
+<script src="js/creatives/lausanne2020.js" type="text/javascript"></script>
 <script src="js/common.js"></script>
