--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,6 +9,19 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.baseurl_root }}">
 
   <link rel="stylesheet" href="{{ "/css/vendors/normalize.css" | prepend: site.baseurl_root }}">
+  <link href="{{ "/css/components.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
+  <link href="{{ "/css/lausanne2020.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl_root }}">
+  <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ["Montserrat:400,700","Sanchez:regular,italic"]
+      }
+    });
+  </script>
+  <script src="js/vendors/modernizr.js" type="text/javascript"></script>
+  <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
+  <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 
 </head>
