--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,3 +1,3 @@
-<script src="js/vendors/jQuery.js"></script>
-<script src="js/creatives/lausanne2020.js" type="text/javascript"></script>
-<script src="js/common.js"></script>
+<script src="{{site.url}}/js/vendors/jQuery.js"></script>
+<script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script>
+<script src="{{site.url}}/js/common.js"></script>
