--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
       }
     });
   </script>
-  <script src="js/vendors/modernizr.js" type="text/javascript"></script>
+  <script src="{{site.url}}/js/vendors/modernizr.js" type="text/javascript"></script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
 
