--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -17,5 +17,12 @@
       <div class="w-icon-nav-menu"></div>
     </div>
   </div>
+  {% if site.lang == "fr" %}
+  {% capture link1 %}{{ site.baseurl_root }}{{ page.url}}{% endcapture %}
+  <a href="{{ link1 }}" >en</a>
+  {% elsif site.lang == "en" %}
+    {% capture link2 %}{{ site.baseurl_root }}fr{{ page.url  }}{% endcapture %}
+    <a href="{{ link2 }}" >fr</a>
+  {% endif %}
   <div class="bg_scroll"></div>
 </div>
