Fix strange bug for language selector

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -12,17 +12,19 @@
       {% for link in nav %}
         <a class="nav_link w-nav-link" href="{{link.path}}">{{link.title}}</a>
       {% endfor %}
+        {% if site.lang == "fr" %}
+{% capture link1 %}{{ site.baseurl_root }}{{ page.url}}{% endcapture %}
+<a href="{{ link1 }}" >en</a>
+{% elsif site.lang == "en" %}
+  {% capture link2 %}{{ site.baseurl_root }}fr{{ page.url  }}{% endcapture %}
+  <a href="{{ link2 }}" >fr</a>
+  {% else%}
+  <a href="#">AUCUNE LANGUE</a>
+{% endif %}
     </nav>
     <div class="w-nav-button">
       <div class="w-icon-nav-menu"></div>
     </div>
   </div>
-  {% if site.lang == "fr" %}
-  {% capture link1 %}{{ site.baseurl_root }}{{ page.url}}{% endcapture %}
-  <a href="{{ link1 }}" >en</a>
-  {% elsif site.lang == "en" %}
-    {% capture link2 %}{{ site.baseurl_root }}fr{{ page.url  }}{% endcapture %}
-    <a href="{{ link2 }}" >fr</a>
-  {% endif %}
   <div class="bg_scroll"></div>
 </div>
