--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -1,2 +1,4 @@
 <script src="{{site.url}}/js/vendors/jQuery.js"></script>
-<script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script>
+<script src="{{site.url}}/js/vendors/bootstrap.js" type="text/javascript"></script>
+<script src="{{site.url}}/js/creatives/navbar.js" type="text/javascript"></script>
+<!-- <script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script> -->
