--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -1,30 +1,54 @@
-<div class="nav_section">
-  <div class="nav w-nav" data-animation="default" data-collapse="medium" data-duration="400">
-    <a class="w-nav-brand" href="index.html">
-      <img class="logo" sizes="(max-width: 479px) 79vw, 235px" src="images/logo-LS2020-YOG-DNA.png" srcset="images/logo-LS2020-YOG-DNA-p-500x150.png 500w, images/logo-LS2020-YOG-DNA.png 600w" width="235">
-    </a>
-    <nav class="w-nav-menu" role="navigation">
-      {% if site.lang == "en" %}
-        {% assign nav = site.data.nav.en %}
-      {% else if site.lang == "fr" %}
-        {% assign nav = site.data.nav.fr %}
-      {% endif %}
-      {% for link in nav %}
-        <a class="nav_link w-nav-link" href="{{link.path}}">{{link.title}}</a>
-      {% endfor %}
-        {% if site.lang == "fr" %}
-{% capture link1 %}{{ site.baseurl_root }}{{ page.url}}{% endcapture %}
-<a href="{{ link1 }}" >en</a>
-{% elsif site.lang == "en" %}
-  {% capture link2 %}{{ site.baseurl_root }}fr{{ page.url  }}{% endcapture %}
-  <a href="{{ link2 }}" >fr</a>
-  {% else%}
-  <a href="#">AUCUNE LANGUE</a>
+{% if site.lang == "en" %}
+  {% assign nav = site.data.nav.en %}
+{% else if site.lang == "fr" %}
+  {% assign nav = site.data.nav.fr %}
 {% endif %}
-    </nav>
-    <div class="w-nav-button">
-      <div class="w-icon-nav-menu"></div>
+
+<!-- Navigation -->
+<nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
+    <div class="container">
+        <a class="w-nav-brand" href="index.html">
+          <img class="logo" sizes="(max-width: 479px) 79vw, 235px" src="images/logo-LS2020-YOG-DNA.png" srcset="images/logo-LS2020-YOG-DNA-p-500x150.png 500w, images/logo-LS2020-YOG-DNA.png 600w" width="235">
+        </a>
+
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span><div class="w-icon-nav-menu"></div><i class="fa fa-bars"></i>
+            </button>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="navbar-collapse collapse in" id="bs-example-navbar-collapse-1">
+            <div class="nav navbar-nav navbar-right">
+
+              {% for link in nav %}
+
+                {% capture currentpage %}{{ site.baseurl }}{{ page.url | split:'.html' |first}}{% endcapture %}
+
+                {% if currentpage == link.path %}
+                  <a class="nav_link w-nav-link w--current" href="{{link.path}}">
+                {% else %}
+                  <a class="nav_link w-nav-link" href="{{link.path}}">
+                {% endif %}
+
+                {{link.title | replace:'2020', '<span class="accent">2020</span>'}}</a>
+              {% endfor %}
+
+            </div>
+            <div class="nav navbar-nav navbar-left">
+              {% if site.lang == "fr" %}
+              {% capture link1 %}{{ site.baseurl_root }}{{ page.url}}{% endcapture %}
+              <a href="{{ link1 }}" >en</a>
+              {% elsif site.lang == "en" %}
+                {% capture link2 %}{{ site.baseurl_root }}fr{{ page.url  }}{% endcapture %}
+                <a href="{{ link2 }}" >fr</a>
+                {% else%}
+                <a href="#">AUCUNE LANGUE</a>
+              {% endif %}
+            </div>
+        </div>
+        <!-- /.navbar-collapse -->
     </div>
-  </div>
-  <div class="bg_scroll"></div>
-</div>
+    <!-- /.container-fluid -->
+</nav>
