--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,3 +1,11 @@
+textarea {
+   resize:vertical;
+}
+
+// Hidden field in form contact against bot spam (leave the name in french)
+.cache{
+  display:none;
+}
 
 // Custom Navigation Bar
 
@@ -23,10 +31,6 @@
   font-family: Sanchez, sans-serif;
   color: #ce0071;
   font-weight: 400;
-}
-
-textarea {
-   resize:vertical;
 }
 
 // Footer
