--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -3,3 +3,62 @@
 <script src="{{site.url}}/js/creatives/navbar.js" type="text/javascript"></script>
 <script src="{{site.url}}/js/common.js" type="text/javascript"></script>
 <!-- <script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script> -->
+<script src="{{site.url}}/js/vendors/moment-with-locales.min.js"></script>
+<script src="{{site.url}}/js/vendors/jQuery.curtail.min.js"></script>
+
+<script>
+
+
+
+      $(function(){
+        $('.status').curtail({
+              limit: 100,
+              ellipsis: '...',
+              toggle: true
+          });
+  });
+
+
+    moment().format();
+    // Get the language in html attribute lang=
+    moment.locale($('html')[0].lang);
+    // Change the date for every element time in Social_wall div
+    $('.social_wall').find('time').each(function(i){
+      $( this ).text(moment($( this ).html()).fromNow());
+    });
+
+
+    var $el, $ps, $up, totalHeight;
+
+    $(".social_wall .status_box .read-more a").click(function() {
+
+      totalHeight = 0
+
+      $el = $(this);
+      $p  = $el.parent();
+      $up = $p.parent();
+      $ps = $up.find("p:not('.read-more')");
+
+      // measure how tall inside should be by adding together heights of all inside paragraphs (except read-more paragraph)
+      $ps.each(function() {
+        totalHeight += $(this).outerHeight(true);
+      });
+
+      $up
+        .css({
+          // Set height to prevent instant jumpdown when max height is removed
+          "height": $up.height(true),
+          "max-height": 9999
+        })
+        .animate({
+          "height": totalHeight
+        });
+
+      // fade out read-more
+      $p.fadeOut();
+
+      // prevent jump-down
+      return false;
+
+    });
+</script>
