--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -22,7 +22,7 @@
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color:#858585;
+  color:#FFF;
 }
 
 .icon-arrow-down:before, .w-icon-arrow-down:before, .w-icon-dropdown-toggle:before {
