--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -64,3 +64,8 @@
 
   });
 </script>
+
+<!--[if lt IE 9]>
+    <script src="https://unpkg.com/object-fit-images@3.0.1/dist/ofi.min.js"></script>
+    <script>objectFitImages();</script>
+<![endif]-->
