--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -6,7 +6,7 @@
 <!-- <script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script> -->
 <script src="{{site.url}}/js/vendors/moment-with-locales.min.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
 <script>
   $(function(){
 
