Major rewriting on social-wall plugin
- Find a way to use a layout
- Added Lightbox
- Cleaned code
- Remove monkey patching

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 
   <link rel="stylesheet" href="{{ "/css/vendors/normalize.css" | prepend: site.baseurl_root }}">
   <link rel="stylesheet" href="{{ "/css/vendors/bootstrap.min.css" | prepend: site.baseurl_root }}">
+  <link rel="stylesheet" href="{{ "/css/vendors/featherlight.min.css" | prepend: site.baseurl_root }}">
   <link href="{{ "/css/components.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
   <link href="{{ "/css/lausanne2020.css" | prepend: site.baseurl_root }}" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ "/css/style.css" | prepend: site.baseurl_root }}">
