--- a/_includes/end-scripts.html
+++ b/_includes/end-scripts.html
@@ -5,6 +5,7 @@
 <script src="{{site.url}}/js/common.js" type="text/javascript"></script>
 <!-- <script src="{{site.url}}/js/creatives/lausanne2020.js" type="text/javascript"></script> -->
 <script src="{{site.url}}/js/vendors/moment-with-locales.min.js"></script>
+<script src="{{site.url}}/js/vendors/featherlight.min.js"></script>
 <script src="{{site.url}}/js/vendors/jquery.dotdotdot.min.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpBk0OIM7nh9iOiqxslyGPBSRp_uVaCmw"></script>
 <script>
@@ -15,23 +16,30 @@
     $('.the_claim:nth-of-type('+ random_number +')').addClass('w--current');
 
     /* SOCIAL_WALL */
+    truncate_desc('.desc');
 
     // Truncate quoted status and shared story
-    $('.desc').each(function(i, obj) {
-      $el = $(this);
-      $wrap_story= $el.parent();
-      height_available = $wrap_story.outerHeight(true)
-      $ps = $wrap_story.children("*:not(.desc)");
+    function truncate_desc(el){
+      $(el).each(function(i, obj) {
+        $el = $(this);
+        $wrap_story= $el.parent();
+        height_available = $wrap_story.outerHeight(true)
+        $ps = $wrap_story.children("*:not(.desc)");
 
-      // measure how tall inside should be by adding together
-      $ps.each(function() {
-        height_available -= $(this).outerHeight(true);
+        // measure how tall inside should be by adding together
+        $ps.each(function() {
+          height_available -= $(this).outerHeight(true);
+        });
+
+        $el.css('height', height_available)
+
+        $el.dotdotdot()
+
       });
+    }
 
-      $el.css('height', height_available)
-
-      $el.dotdotdot()
-
+    $( window ).resize(function() {
+      truncate_desc('.desc');
     });
 
     // Change Time Format
