--- a/css/lausanne2020.css
+++ b/css/lausanne2020.css
@@ -991,3 +991,71 @@ h1 {
     padding-left: 40px;
   }
 }
+/* Updates ABG */
+.sites{
+  background-image: url(../images/bkg_blue.png), linear-gradient(180deg, #0087cd, #0087cd);
+  background-position: 0px 0px, 0px 0px;
+  background-size: cover, auto;
+  padding-top: 35px;
+  padding-bottom: 50px;
+}
+.sites h1{
+  color: #fff;
+  text-align: center;
+  margin-top: 10px;
+}
+.sites_thumb {
+  height: 200px;
+  width: 300px;
+  background-position: 0px 0px;
+  background-size: cover;
+}
+.row-sites {
+  display: block;
+  max-width: 1280px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.overlay_sites {
+  position: absolute;
+  display: block;
+  width: 300px;
+  height: 200px;
+  padding-right: 15px;
+  padding-left: 15px;
+  background-image: -webkit-linear-gradient(270deg, rgba(206, 0, 113, .78), rgba(206, 0, 113, .78));
+  background-image: linear-gradient(180deg, rgba(206, 0, 113, .78), rgba(206, 0, 113, .78));
+  opacity: 0;
+  -webkit-transition: all 200ms ease;
+  transition: all 200ms ease;
+}
+.overlay_sites:hover{
+  opacity: 1;
+}
+@media (max-width: 479px){
+  .overlay_sites {
+    margin-top: 200px;
+    background-image: -webkit-linear-gradient(270deg, #ce0071, #ce0071);
+    background-image: linear-gradient(180deg, #ce0071, #ce0071);
+    opacity: 1;
+  }
+  .sites_thumb{
+    display: block;
+    margin: 20px auto 200px;
+  }
+}
+.h1_overlay {
+  font-family: Montserrat, sans-serif;
+  color: #fff;
+  font-size: 22px;
+  text-align: center;
+  padding-top: 10px;
+  margin-bottom: 10px;
+  line-height: 44px;
+  font-weight: bold;
+}
+.p_overlay {
+  font-family: Montserrat, sans-serif;
+  color: #fff;
+  text-align: center;
+}
