Add footer withe bar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
 <div class="footer">
   <div class="top_footer"></div>
-  <div class="footer_wrap">
+  <div class="container">
     <div class="row">
       <div class="footer_logo col-md-4">
         <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="images/l2020_white.png" srcset="images/l2020_white-p-500x165.png 500w, images/l2020_white.png 637w" width="307">
@@ -22,6 +22,39 @@
             </li>
           {% endfor %}
         </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="botbar">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 footer-pics">
+        <a class="links_games" href="#">
+          <img height="80" src="images/2020_1.png">
+        </a>
+        <a class="" href="#">
+          <img height="80" src="images/Beijing_2022_emblem.jpg">
+        </a>
+        <a class="links_games" href="#">
+          <img height="80" src="images/Buenos_Aires_2018_logo.jpg">
+        </a>
+        <a class="links_games" href="#">
+          <img height="80" src="images/2018_2.png">
+        </a>
+      </div>
+      <div class="col-md-6 footer-pics">
+        <div class="links_social">
+          <a class="links_games w-inline-block" href="#">
+            <img height="40" sizes="40px" src="images/Instagram-logo.png" srcset="images/Instagram-logo.png 500w, images/Instagram-logo.png 512w">
+          </a>
+          <a class="links_games w-inline-block" href="#">
+            <img height="40" sizes="40px" src="images/facebook-icon-preview-1.png" srcset="images/facebook-icon-preview-1.png 500w, images/facebook-icon-preview-1.png 512w">
+          </a>
+          <a class="w-inline-block" href="#">
+            <img height="28" src="images/20161107041729Twitter_bird_logo_2012.svg">
+          </a>
+        </div>
       </div>
     </div>
   </div>
