--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -134,10 +134,30 @@ textarea {
     }
 }
 
-@media (max-width: 991px){
+@media (max-width: 992px){
   .top_footer {
       left: 0px;
       top: -61px;
       right: 0px;
   }
+}
+.botbar{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+.links_social {
+  padding-top: 22px;
+  text-align: right;
+}
+@media (max-width: 992px){
+  .footer-pics{
+    text-align: center;
+  }
+  .links_social {
+    padding-top: 22px;
+    text-align: center;
+  }
+}
+.links_games {
+  margin-right: 20px;
 }
