Change footer style

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,18 +1,20 @@
 {% if site.lang == "en" %}
   {% assign nav = site.data.nav.en %}
-{% else if site.lang == "fr" %}
+{% endif %}
+{% if site.lang == "fr" %}
   {% assign nav = site.data.nav.fr %}
 {% endif %}
-
+{% if site.lang == "de" %}
+  {% assign nav = site.data.nav.de %}
+{% endif %}
 <div class="footer">
-  <div class="top_footer"></div>
   <div class="container">
     <div class="row">
       <div class="footer_logo col-md-4">
         <img sizes="(max-width: 479px) 92vw, (max-width: 767px) 307px, (max-width: 991px) 31vw, 307px" src="images/l2020_white.png" srcset="images/l2020_white-p-500x165.png 500w, images/l2020_white.png 637w" width="307">
       </div>
       <div class="col-md-4">
-        <div class="copy">copyrights © 2016 | Lausanne2020</div>
+        <div class="copy">copyrights © 2017 | Lausanne2020</div>
       </div>
       <div class="col-md-4">
         <ul class="footer_link w-list-unstyled">
@@ -21,6 +23,12 @@
             <a class="footer_link" href="{{link.path}}">{{link.title}}</a>
             </li>
           {% endfor %}
+          <li>
+            <a class="footer_link" href="#">{% t footer.links.jobs %}</a>
+          </li>
+          <li>
+            <a class="footer_link" href="#">{% t footer.links.volunteers %}</a>
+          </li>
         </ul>
       </div>
     </div>
