--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -52,9 +52,9 @@ textarea {
   position: relative;
   z-index: 3000;
   margin-top: 50px;
-  padding-top: 20px;
+  padding-top: 50px;
   padding-bottom: 50px;
-  background-color: $blue-primary;
+  background-color: $dark-blue;
 }
 
 .top_footer{
