--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -1,11 +1,11 @@
 {% if site.lang == "en" %}
-  {% assign nav = site.data.nav.en %}
+  {% assign nav = site.data.nav-header.en %}
 {% endif %}
 {% if site.lang == "fr" %}
-  {% assign nav = site.data.nav.fr %}
+  {% assign nav = site.data.nav-header.fr %}
 {% endif %}
 {% if site.lang == "de" %}
-  {% assign nav = site.data.nav.de %}
+  {% assign nav = site.data.nav-header.de %}
 {% endif %}
 
 
