--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -25,3 +25,8 @@
 .hero .container{
 	padding: 305px 0 0 0;
 }
+.news_section {
+    margin-top: 100px;
+    padding-top: 20px;
+    padding-bottom: 50px;
+}
