Improve navbar and main title position on mobile

--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -13,7 +13,7 @@
 <nav id="mainNav" class="navbar navbar-custom navbar-fixed-top">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-md-offset-6 header-pics">
+        <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
           <div class="links_social">
             <a class="links_games w-inline-block" href="#">
               <img height="30" src="images/Instagram-logo.png" srcset="images/Instagram-logo.png 500w, images/Instagram-logo.png 512w">
@@ -33,13 +33,13 @@
 
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span><div class="icon-nav"></div><i class="fa fa-bars"></i>
             </button>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="navbar-collapse collapse in" id="bs-example-navbar-collapse-1">
+        <div class="navbar-collapse collapse" id="bs-example-navbar-collapse-1">
             <div class="nav navbar-nav navbar-right">
 
               {% for link in nav %}
