--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -109,18 +109,12 @@ textarea {
 
 // Navbar Change on Scroll
 
-@media(min-width:767px) {
-    .navbar-custom.affix {
-      background-color:white;
-    }
-}
-
 @media(max-width:767px) {
   .w-nav-brand .logo{
       padding:17px 10px 0 30px;
   }
     .navbar-header {
-      padding: 10px 0;
+      padding: 20px 0;
       background-color: #FFF;
       .navbar-toggle{
         margin-bottom: -20px;
@@ -174,7 +168,7 @@ textarea {
 }
 .header-pics .links_social{
   padding-bottom: 22px;
-  padding-top:0;
+  padding-top:8px;
 }
 @media (max-width: 992px){
   .footer-pics{
