--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -9,7 +9,7 @@
     	color: #fff;
     }
     p{
-    	text-align: center;
+    	text-align: justify;
     	color: #fff;
     	margin-bottom: 50px;
 	    margin-top: 20px;
@@ -105,8 +105,6 @@
         font-family: Montserrat, sans-serif;
         line-height: 27px;
         font-weight: 400;
-        @media (max-width: 991px){
-            text-align: center;
-        }
+        text-align: justify;
     }
 }
