Footer nav link hover style

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -79,6 +79,11 @@ textarea {
   padding-top: 50px;
   padding-bottom: 50px;
   background-color: $dark-blue;
+  .footer_link{
+    &:hover{
+      color:#0087cd;
+    }
+  }
 }
 
 .top_footer{
