Sites rollover style

--- a/_sass/_sites.scss
+++ b/_sass/_sites.scss
@@ -73,7 +73,7 @@
     width: 100%;
 }
 .sqr .inside:hover .hover .title {
-    top: inherit;
+    top: 40%;
 }
 .sqr .inside:hover .hover .description {
     height: auto;
