CIO partners template on home page

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -62,6 +62,9 @@
     }
 }
 .cio-sponsors{
+	padding-top:80px;
+	padding-bottom:80px;
+	text-align:center;
 	.sponsors-list.first {
     	margin-top: 0;
 	}
