--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -32,18 +32,34 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 footer-pics">
-        <a class="links_games" href="#">
+        <div class="row">
+          <div class="col-md-3 col-xs-6">
+            <a class="links_games" href="#">
           <img height="80" src="images/2020_1.png">
         </a>
-        <a class="" href="#">
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a class="" href="#">
           <img height="80" src="images/Beijing_2022_emblem.jpg">
         </a>
-        <a class="links_games" href="#">
+          </div>
+        
+        
+          <div class="col-md-3 col-xs-6">
+            <a class="links_games" href="#">
           <img height="80" src="images/Buenos_Aires_2018_logo.jpg">
         </a>
-        <a class="links_games" href="#">
+          </div>
+          <div class="col-md-3 col-xs-6">
+            <a class="links_games" href="#">
           <img height="80" src="images/2018_2.png">
         </a>
+          </div>
+        </div>
+        
+        
+        
+        
       </div>
       <div class="col-md-6 footer-pics">
         <div class="links_social">
