--- a/_includes/main_nav.html
+++ b/_includes/main_nav.html
@@ -15,13 +15,13 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-6 header-pics navbar-right">
           <div class="links_social">
-            <a class="links_games w-inline-block" href="#">
+            <a class="links_games w-inline-block" href="https://www.instagram.com/lausanne2020">
               <img height="30" src="images/Instagram-logo.png" srcset="images/Instagram-logo.png 500w, images/Instagram-logo.png 512w">
             </a>
-            <a class="links_games w-inline-block" href="#">
+            <a class="links_games w-inline-block" href="https://www.facebook.com/lausanne2020/">
               <img height="30" sizes="30px" src="images/facebook-icon-preview-1.png" srcset="images/facebook-icon-preview-1.png 500w, images/facebook-icon-preview-1.png 512w">
             </a>
-            <a class="w-inline-block" href="#">
+            <a class="w-inline-block" href="https://twitter.com/lausanne2020">
               <img height="24" src="images/20161107041729Twitter_bird_logo_2012.svg">
             </a>
           </div>
