Footer add link for other olympic games

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,24 +34,24 @@
       <div class="col-md-6 footer-pics">
         <div class="row">
           <div class="col-md-3 col-xs-6">
-            <a class="links_games" href="#">
+            <a class="links_games" href="{% t footer.link.tokyo %}">
           <img height="80" src="images/2020_1.png">
         </a>
           </div>
           <div class="col-md-3 col-xs-6">
-            <a class="" href="#">
+            <a class="" href="{% t footer.link.beijing %}">
           <img height="80" src="images/Beijing_2022_emblem.jpg">
         </a>
           </div>
         
         
           <div class="col-md-3 col-xs-6">
-            <a class="links_games" href="#">
+            <a class="links_games" href="{% t footer.link.buenos %}">
           <img height="80" src="images/Buenos_Aires_2018_logo.jpg">
         </a>
           </div>
           <div class="col-md-3 col-xs-6">
-            <a class="links_games" href="#">
+            <a class="links_games" href="{% t footer.link.pyeongChang %}">
           <img height="80" src="images/2018_2.png">
         </a>
           </div>
