Fix About section on home page

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -32,6 +32,13 @@
 }
 .about_the_yog_p{
 	text-align: justify;
+	a{
+		color: #fff;
+		text-decoration: underline;
+	}
+}
+.h1_about_yog{
+	font-family: Montserrat, sans-serif;
 }
 .news_section {
     background-image: url(../images/bkg_blue.png);
