--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -113,6 +113,10 @@
     img{
         margin-top: 20px;
     }
+    .important-dates{
+        font-size: 22px;
+        font-weight: bold;
+    }
 }
 .facts{
     padding-top: 100px;
