--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -121,6 +121,10 @@
 .facts{
     padding-top: 100px;
     padding-bottom: 100px;
+    h1{
+        text-align: center;
+        color: #fff;
+    }
 }
 @media (min-width: 768px){
   .seven-cols .col-md-1,
@@ -151,4 +155,40 @@
     width: 14.285714285714285714285714285714%;
     *width: 14.285714285714285714285714285714%;
   }
+}
+
+.col-xs-5ths,
+.col-sm-5ths,
+.col-md-5ths,
+.col-lg-5ths {
+    position: relative;
+    min-height: 1px;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+
+.col-xs-5ths {
+    width: 20%;
+    float: left;
+}
+
+@media (min-width: 768px) {
+    .col-sm-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 992px) {
+    .col-md-5ths {
+        width: 20%;
+        float: left;
+    }
+}
+
+@media (min-width: 1200px) {
+    .col-lg-5ths {
+        width: 20%;
+        float: left;
+    }
 }
