--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -152,8 +152,23 @@
         text-align: center;
         color: #fff;
     }
+    .h2_facts {
+        text-transform: none;
+        font-size: 18px;
+    }
+    .facts-entities{
+        display: flex;
+        @media (max-width: 992px){
+            flex-wrap: wrap;
+        }
+    }
     .fact{
-        margin-top: 20px; 
+        margin-top: 20px;
+        flex-basis: 0;
+        flex-grow: 1;
+        @media (max-width: 992px){
+            flex-basis: 100%;
+        }
     }
     @media (min-width: 768px){
         .fact:nth-child(odd) .wrap_facts h1{
