--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -161,6 +161,9 @@ textarea {
 .botbar{
   padding-top: 20px;
   padding-bottom: 20px;
+  a:hover, a:focus{
+    text-decoration: none;
+  }
 }
 .links_social {
   padding-top: 22px;
